--- a/public/master.css
+++ b/public/master.css
@@ -1,13 +1,37 @@
 body {
   background-color: #222;
   color: #ddd;
+  font-family: sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  margin: 0px;
 }
 .titudes {
   color: #99f;
   text-shadow: 0px 0px 6px #33e;
+  text-align: center;
 }
 .titudes p {
   margin-top: 0px;
   display: inline-block;
+  margin: 0px;
   margin-right: 20px;
+  line-height: 50px;
+}
+.titudes div {
+  display: inline-block;
+  background-color: #444;
+  width: calc(100% - 100px);
+  max-width: 600px;
+  text-align: center;
+  border-radius: 10px;
+  transition: 0.2s;
+  margin: 10px 20px;
+}
+.titudes div:hover {
+  background-color: #555;
+}
+.map {
+  width: 100%;
+  height: 400px;
 }
