--- a/public/master.css
+++ b/public/master.css
@@ -1,15 +1,27 @@
 body {
-  background-color: #222;
+
   color: #ddd;
   font-family: sans-serif;
   font-weight: 400;
   font-size: 20px;
   margin: 0px;
+  height: 100vh;
+}
+.background {
+  background: linear-gradient(#001352, #ff3c00, #fff200);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 .titudes {
   color: #99f;
   text-shadow: 0px 0px 6px #33e;
   text-align: center;
+  height: 100px;
+  width: 100vw;
 }
 .titudes p {
   margin-top: 0px;
@@ -21,18 +33,24 @@ body {
 .titudes div {
   display: inline-block;
   background-color: #444;
-  width: calc(100% - 100px);
+  width: 46%;
   max-width: 600px;
   text-align: center;
   border-radius: 10px;
   transition: 0.2s;
-  margin: 10px 20px;
+  margin: 20px 1%;
 }
+
 .titudes div:hover {
   background-color: #555;
-  box-shadow: 0px 0px 12px 0px black;
+  box-shadow: 0px 0px 12px 0px #555;
 }
 .map {
   width: 100%;
-  height: calc(100vh - 140px);
+  height: 85%;
+}
+@media screen and (max-width: 450px) {
+  #map {
+    height: 0px;
+  }
 }
