--- a/public/master.css
+++ b/public/master.css
@@ -3,7 +3,7 @@ body {
   color: #ddd;
   font-family: sans-serif;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 3vw;
   margin: 0px;
   height: 100vh;
 }
@@ -20,7 +20,7 @@ body {
   color: #99f;
   text-shadow: 0px 0px 6px #33e;
   text-align: center;
-  height: 100px;
+  height: 10%;
   width: 100vw;
 }
 .titudes p {
@@ -34,11 +34,11 @@ body {
   display: inline-block;
   background-color: #444;
   width: 46%;
-  max-width: 600px;
+  height: 80%;
   text-align: center;
   border-radius: 10px;
   transition: 0.2s;
-  margin: 20px 1%;
+  margin: 1%;
 }
 
 .titudes div:hover {
@@ -49,8 +49,8 @@ body {
   width: 100%;
   height: 85%;
 }
-@media screen and (max-width: 450px) {
-  #map {
-    height: 0px;
+@media (max-width: 450px) {
+  .titudes {
+    display: none;
   }
 }
