--- a/public/master.css
+++ b/public/master.css
@@ -21,7 +21,7 @@ body {
   text-shadow: 0px 0px 6px #33e;
   text-align: center;
   height: 40%;
-  width: 100vw;
+  width: 100%;
 }
 .titudes p {
   margin-top: 0px;
@@ -33,7 +33,8 @@ body {
 .titudes div {
   display: inline-block;
   background-color: #444;
-  width: 46%;
+  width: 48%;
+  min-width: 300px;
   height: 70%;
   max-height: 100px;
   text-align: center;
