--- a/public/master.css
+++ b/public/master.css
@@ -3,7 +3,7 @@ body {
   color: #ddd;
   font-family: sans-serif;
   font-weight: 400;
-  font-size: 3vw;
+  font-size: 20px;
   margin: 0px;
   height: 100vh;
 }
@@ -21,22 +21,21 @@ body {
   text-shadow: 0px 0px 6px #33e;
   text-align: center;
   height: 40%;
-  width: 100%;
+  width: 100vw;
 }
 .titudes p {
   margin-top: 0px;
   display: inline-block;
   margin: 0px;
   margin-right: 20px;
-  line-height: 200%;
+  line-height: 125%;
 }
 .titudes div {
   display: inline-block;
   background-color: #444;
-  width: 48%;
-  min-width: 300px;
-  height: 70%;
-  max-height: 100px;
+  width: 80vw;
+  max-width: 300px;
+  height: 10vh;
   text-align: center;
   border-radius: 10px;
   transition: 0.2s;
@@ -50,9 +49,4 @@ body {
 .map {
   width: 100%;
   height: 85%;
-}
-@media (max-width: 450px) {
-  .titudes {
-    display: none;
-  }
 }
