--- a/public/master.css
+++ b/public/master.css
@@ -8,7 +8,7 @@ body {
   height: 100vh;
 }
 .background {
-  background: linear-gradient(#001352, #ff3c00);
+  background: linear-gradient(#6babff, #000942);
   position: fixed;
   top: 0px;
   left: 0px;
@@ -16,9 +16,15 @@ body {
   height: 100%;
   z-index: -1;
 }
-.titudes {
+.bluetext {
   color: #99f;
   text-shadow: 0px 0px 6px #33e;
+}
+.bluetext:hover {
+  color: #99f;
+  text-shadow: 0px 0px 6px #33e;
+}
+.titudes {
   text-align: center;
   height: 40%;
   width: 100vw;
@@ -44,6 +50,8 @@ body {
 .map {
   width: 100%;
   height: 85%;
+  box-shadow: 0px 0px 24px 8px #000066;
+  margin-bottom: 20px;
 }
 .btn-center {
   margin: 10px 50%;
@@ -55,10 +63,16 @@ body {
 .form {
   width: 50vw;
   margin-left: 10vw;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+  padding: 0px 20px;
+  background-color: rgba(255, 255, 255, 0.08);
+  border-radius: 8px;
 }
 .form input, button {
   display: block;
-  margin-top: 10px;
+  margin-top: 16px;
+  margin-right: 30px;
+  padding: 0px 20px;
 }
 .black-trans {
   background-color: rgba(0, 0, 0, 0.6);
@@ -67,4 +81,11 @@ body {
 .black-trans:hover {
   background-color: rgba(0, 0, 0, 0.65);
   box-shadow: 0px 0px 13px 3px black;
+}
+#savelocation {
+  margin-left: calc(10vw + 10px);
+  margin-bottom: 20px;
+}
+#placerating {
+  display: none;
 }
