--- a/public/master.css
+++ b/public/master.css
@@ -71,6 +71,7 @@ body {
 .form input, button {
   display: block;
   margin-top: 16px;
+  margin-bottom: 16px;
   margin-right: 30px;
   padding: 0px 20px;
 }
