--- a/public/master.css
+++ b/public/master.css
@@ -61,8 +61,7 @@ body {
   box-shadow: 0px 0px 0px 0px black;
 }
 .form {
-  width: 50vw;
-  margin-left: 10vw;
+  width: 80%;
   border: 2px solid rgba(255, 255, 255, 0.3);
   padding: 0px 20px;
   background-color: rgba(255, 255, 255, 0.08);
@@ -84,9 +83,11 @@ body {
   box-shadow: 0px 0px 13px 3px black;
 }
 #savelocation {
-  margin-left: calc(10vw + 10px);
   margin-bottom: 20px;
 }
 #placerating {
   display: none;
+}
+.wrapper {
+  margin-left: 10%;
 }
