--- a/public/master.css
+++ b/public/master.css
@@ -91,3 +91,24 @@ body {
 .wrapper {
   margin-left: 10%;
 }
+.places-table th, .places-table td {
+  padding: 5px 60px 5px 20px;
+}
+.places-table thead {
+  border-bottom: 2px solid white;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.places-table {
+  box-shadow: 0 0 10px 0 black;
+}
+.places-table tbody tr {
+  border-bottom: 2px solid rgba(255, 255, 255, 0.4);
+}
+@media (max-width: 768px) {
+  .col-sm-6 {
+    width: 100%;
+  }
+  body {
+    display: none;
+  }
+}
